# drake-blender-tools

./: .gitignore  Makefile  README.md  pyproject.toml
blender_addons/: keyframe_importer.py
blender_addons/meshcat_html_importer/: __init__.py  blender_manifest.toml  operators.py
blender_addons/meshcat_html_importer/animation/: __init__.py  keyframe_converter.py
blender_addons/meshcat_html_importer/blender_impl/: __init__.py  animation_builder.py  material_builder.py  mesh_builder.py  scene_builder.py
blender_addons/meshcat_html_importer/parser/: __init__.py  html_extractor.py  msgpack_decoder.py
blender_addons/meshcat_html_importer/scene/: __init__.py  geometry.py  materials.py  scene_graph.py  transforms.py
examples/: example_sim.py
examples/example_output/: example.pkl
tests/: __init__.py  test_addon_vendor_sync.py  test_cli_addon_parity.py
tests/test_meshcat_importer/: __init__.py  test_animation.py  test_parser.py  test_scene.py
tests/test_recording_server/: __init__.py  test_server.py
