[project]
name = "drake-blender-tools"
version = "0.1.0"
description = "Tools for recording Drake simulations and importing meshcat recordings into Blender"
authors = [{ name = "Nicholas Pfaff", email = "nepfaff@mit.edu" }]
readme = "README.md"
license = { text = "BSD-2-Clause" }
requires-python = ">=3.11"
# This is a virtual workspace root - no actual package
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "numpy>=1.26,<2.0",
    "msgpack>=1.0.0",
    "bpy>=5.0.0",
]

[tool.uv]
# Make this a virtual workspace (not an installable package)
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.isort]
profile = "black"
lines_between_types = 1
combine_as_imports = true
known_first_party = ["drake_recording_server", "meshcat_html_importer"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
